--- a/src/Organisms/RevenueCycleManagement.jsx/RevenueCycleManagement.scss
+++ b/src/Organisms/RevenueCycleManagement.jsx/RevenueCycleManagement.scss
@@ -1,6 +1,6 @@
 .contentDark{
     width:inherit;
-    height:1240px;
+    height:auto;
     background-color:  #000;
     padding: 150px 4.5%;
     color:white;
@@ -32,7 +32,7 @@
     }
 
     .content2{
-        margin-top:300px;
+        margin-top:150px;
         display: flex;
         gap:3rem;
         align-items: center;
@@ -43,7 +43,7 @@
     }
     .content3{
         margin-left: 350px;
-        width:1083px;
+        width:870px;
         .content3Text{
             font-family: "trebuchet ms";
             font-size: 32px;
